# proyecto-tfg

./: .gitignore  LICENSE  README.md  pyproject.toml
src/tfg_ml/: __init__.py  context.py
src/tfg_ml/adapters/: analysis_tools.py  feature_selection_tools.py  preprocessing_tools.py  (+2 more)
tfg/: data_crew.py  main.py  readme.md  requirements.txt  shared_context.py  temp_db.sqlite
tfg/agents/: analysis_agent.py  assitant_agent.py  conversational_agent.py  coordinator_agent.py  data_agents.py  data_cleaning_agent.py  eda_agent.py  feature_selection_agent.py  instance_selection_agent.py  model_training_agent.py  preprocessing_agent.py
tfg/agents_v2/: analysis_agent.py  coordinator_agent.py  feature_selection_agent.py  instance_selection_agent.py  preprocessing_agent.py
tfg/artifacts/: random_forest_model.joblib  random_forest_model_metrics.json  svm_model.joblib  svm_model_metrics.json
tfg/ejemplo_streamlit/: main.py
tfg/ejemplo_yt/: crew.py  main.py
tfg/pipeline_data/: metrics.json  model.pkl
tfg/reports/: eda_report.txt  training_report.txt
tfg/saved_model/: random_forest_model.pkl  scaler.pkl
tfg/tools/: analysis_tools.py  context_summary_tool.py  data_cleaning_tool.py  data_preprocessing_tool.py  eda_tool.py  execution_tool.py  feature_selection_tool.py  feature_selection_tools.py  instance_selection_tool.py  instance_selection_tools.py  memory_tool.py  model_training_tool.py  model_training_tools.py  next_task_decision_tool.py  preprocessing_tools.py  question_tool.py  routing_tool.py  suggestion_tool.py  validation_tool.py
tfg/utils/: hugging_face_llm.py
(+8 files in other folders)
